--- a/web/internet/css/custom.css
+++ b/web/internet/css/custom.css
@@ -1,35 +1,54 @@
 html {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 body {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
+}
+
+body#my-account {
+    background-image: url(../img/couple.jpg);
+    background-position: center;
+}
+
+body#my-account main {
+    background: rgba( 240, 240, 240, 0.5);
+    margin-top: 20px;
+}
+
+body#my-account main table {
+    background: rgb( 240, 240, 240);
+    border-radius: 5px;
+}
+
+body#my-account main>*>* {
+    padding: 20px;
 }
 
 .glyphicon {
-	top: 5px;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: rgb( 0, 128, 130);
+    top: 5px;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb( 0, 128, 130);
 }
 
 .btn-circle {
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  padding: 6px 0;
-  font-size: 12px;
-  line-height: 1.428571429;
-  border-radius: 15px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    padding: 6px 0;
+    font-size: 12px;
+    line-height: 1.428571429;
+    border-radius: 15px;
 }
 .btn-circle.btn-lg {
-  width: 50px;
-  height: 50px;
-  padding: 10px 16px;
-  font-size: 18px;
-  line-height: 1.33;
-  border: rgb( 0, 128, 130) 1px solid;
-  border-radius: 25px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border: rgb( 0, 128, 130) 1px solid;
+    border-radius: 25px;
 }
 
 
@@ -44,16 +63,16 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .scroll-section {
-  height: 100%;
-  padding-top: 10%;
-  text-align: center;
+    height: 100%;
+    padding-top: 10%;
+    text-align: center;
 }
 
 .scroll-section .odd {
-  background: grey;
+    background: grey;
 }
 .scroll-section .even {
-  background: white;
+    background: white;
 }
 
 #intro {
@@ -87,12 +106,12 @@ of those sections to manage the look and feel of the site. */
 }
 
 #to-top {
-	display: none;
+    display: none;
 
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
 
-	padding: 10px;
-	padding-top: 5px;
+    padding: 10px;
+    padding-top: 5px;
 }
